[metadata]
name = laser_lock
description = driver program for communication with a Moglabs Fizeau Laser Wavemeter
author = Joshua Wager
author_email= Jwage001@odu.edu
url = https://github.com/Graulab-ODU/laser_locking_software
vesion = 0.0.1

[options]
packages = find:
install_requires = simple_pid
